Fixed text wrapping and spacing on footer links by adding display flex

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -64,8 +64,9 @@ footer {
 
 footer ul {
     list-style-type: none;
-    display: inline-block;
+    display: flex;
     text-align: left;
+    justify-content: center;
 }
 
 footer ul li {
@@ -78,6 +79,7 @@ h1 {
 }
 
 #intro {
+    text-align: center;
     padding: 20px 40px;
 }
 
@@ -123,10 +125,6 @@ h4 {
         padding: 30px 60px;
     }
 
-    footer ul li {
-        display: inline;
-    }
-
 }
   
 /* Large Screens */
@@ -142,6 +140,10 @@ h4 {
 
     #intro {
         padding: 50px 100px;
+    }
+
+    footer ul {
+        gap: 20px;
     }
 
 }
